@@ -3,6 +3,7 @@
 
 import os
 import bpy
+from bpy.types import Panel
 from bpy_extras.io_utils import ImportHelper, ExportHelper
 from io_mesh_w3d.export_utils import save
 from io_mesh_w3d.custom_properties import *
@@ -225,7 +226,6 @@ def menu_func_export(self, _context):
 def menu_func_import(self, _context):
     self.layout.operator(ImportW3D.bl_idname, text='Westwood W3D (.w3d/.w3x)')
 
-from bpy.types import Panel
 
 class MESH_PROPERTIES_PANEL_PT_w3d(Panel):
     bl_label = 'W3D Properties'
@@ -270,148 +270,6 @@ class MATERIAL_PROPERTIES_PANEL_PT_w3d(Panel):
         col.prop(mat, 'surface_type')
 
 
-
-from bpy.types import NodeTree, Node, NodeSocket
-
-
-# Custom socket type
-class MyCustomSocket(NodeSocket):
-    # Description string
-    '''Custom node socket type'''
-    # Optional identifier string. If not explicitly defined, the python class name is used.
-    bl_idname = 'CustomSocketType'
-    # Label for nice name display
-    bl_label = "Custom Node Socket"
-
-    # Enum items list
-    my_items = (
-        ('DOWN', "Down", "Where your feet are"),
-        ('UP', "Up", "Where your head should be"),
-        ('LEFT', "Left", "Not right"),
-        ('RIGHT', "Right", "Not left"),
-    )
-
-    my_enum_prop: bpy.props.EnumProperty(
-        name="Direction",
-        description="Just an example",
-        items=my_items,
-        default='UP',
-    )
-
-    # Optional function for drawing the socket input value
-    def draw(self, context, layout, node, text):
-        if self.is_output or self.is_linked:
-            layout.label(text=text)
-        else:
-            layout.prop(self, "my_enum_prop", text=text)
-
-    # Socket color
-    def draw_color(self, context, node):
-        return (1.0, 0.4, 0.216, 0.5)
-
-
-# Mix-in class for all custom nodes in this tree type.
-# Defines a poll function to enable instantiation.
-class MyCustomTreeNode:
-    @classmethod
-    def poll(cls, ntree):
-        return ntree.bl_idname == 'CustomTreeType'
-
-
-# Derived from the Node base type.
-class MyCustomNode(Node, MyCustomTreeNode):
-    # === Basics ===
-    # Description string
-    '''A custom node'''
-    # Optional identifier string. If not explicitly defined, the python class name is used.
-    bl_idname = 'CustomNodeType'
-    # Label for nice name display
-    bl_label = "Custom Node"
-    # Icon identifier
-    bl_icon = 'SOUND'
-
-    # === Custom Properties ===
-    # These work just like custom properties in ID data blocks
-    # Extensive information can be found under
-    # http://wiki.blender.org/index.php/Doc:2.6/Manual/Extensions/Python/Properties
-    my_string_prop: bpy.props.StringProperty()
-    my_float_prop: bpy.props.FloatProperty(default=3.1415926)
-
-    # === Optional Functions ===
-    # Initialization function, called when a new node is created.
-    # This is the most common place to create the sockets for a node, as shown below.
-    # NOTE: this is not the same as the standard __init__ function in Python, which is
-    #       a purely internal Python method and unknown to the node system!
-    def init(self, context):
-        self.inputs.new('CustomSocketType', "Hello")
-        self.inputs['Hello'].my_enum_prop = 'LEFT'
-        self.inputs['Hello'].default_value = 'RIGHT'
-        self.inputs.new('NodeSocketFloat', "World")
-        self.inputs.new('NodeSocketVector', "!")
-
-        self.outputs.new('NodeSocketColor', "How")
-        self.outputs.new('NodeSocketColor', "are")
-        self.outputs.new('NodeSocketFloat', "you")
-
-        print('DONE')
-
-    def update(self):
-        print('UPDATING')
-        #self.inputs['Hello'].my_enum_prop = 'DOWN'
-
-    # Copy function to initialize a copied node from an existing one.
-    def copy(self, node):
-        print("Copying from node ", node)
-
-    # Free function to clean up on removal.
-    def free(self):
-        print("Removing node ", self, ", Goodbye!")
-
-    # Additional buttons displayed on the node.
-    def draw_buttons(self, context, layout):
-        layout.label(text="Node settings")
-        layout.prop(self, "my_float_prop")
-
-    # Detail buttons in the sidebar.
-    # If this function is not defined, the draw_buttons function is used instead
-    def draw_buttons_ext(self, context, layout):
-        layout.prop(self, "my_float_prop")
-        # my_string_prop button will only be visible in the sidebar
-        layout.prop(self, "my_string_prop")
-
-    # Optional: custom label
-    # Explicit user label overrides this, but here we can define a label dynamically
-    def draw_label(self):
-        return "I am a custom node"
-
-
-import nodeitems_utils
-from nodeitems_utils import NodeCategory, NodeItem
-
-# all categories in a list
-node_categories = [
-    # identifier, label, items list
-    NodeCategory('SOMENODES', 'Some Nodes', items=[
-        # our basic node
-        NodeItem('DecisionNode'),
-    ]),
-    NodeCategory('OTHERNODES', "Other Nodes", items=[
-        # the node item can have additional settings,
-        # which are applied to new nodes
-        # NB: settings values are stored as string expressions,
-        # for this reason they should be converted to strings using repr()
-        NodeItem("CustomNodeType", label="Node A", settings={
-            "my_string_prop": repr("Lorem ipsum dolor sit amet"),
-            "my_float_prop": repr(1.0),
-        }),
-        NodeItem("CustomNodeType", label="Node B", settings={
-            "my_string_prop": repr("consectetur adipisicing elit"),
-            "my_float_prop": repr(2.0),
-        }),
-    ]),
-]
-
-
 from io_mesh_w3d.common.shading.node_socket_texture import NodeSocketTexture
 from io_mesh_w3d.common.shading.node_socket_texture_alpha import NodeSocketTextureAlpha
 from io_mesh_w3d.common.shading.node_socket_vec2 import NodeSocketVector2
@@ -420,8 +278,6 @@ from io_mesh_w3d.common.shading.node_socket_enum import NodeSocketMaterialAttrib
 
 
 CLASSES = (
-    MyCustomSocket,
-    MyCustomNode,
     NodeSocketTexture,
     NodeSocketTextureAlpha,
     NodeSocketVector2,
@@ -431,6 +287,7 @@ CLASSES = (
     ImportW3D,
     MESH_PROPERTIES_PANEL_PT_w3d,
     BONE_PROPERTIES_PANEL_PT_w3d)
+
 
 def register_node_groups():
     from io_mesh_w3d.common.utils.node_group_creator import NodeGroupCreator
@@ -445,11 +302,10 @@ def register_node_groups():
     from io_mesh_w3d.common.shading.vertex_material_group import VertexMaterialGroup
     VertexMaterialGroup.register(VertexMaterialGroup.name)
 
+
 def register():
     for class_ in CLASSES:
         bpy.utils.register_class(class_)
-
-    nodeitems_utils.register_node_categories('CUSTOM_NODES', node_categories)
 
     bpy.types.TOPBAR_MT_file_import.append(menu_func_import)
     bpy.types.TOPBAR_MT_file_export.append(menu_func_export)
