@@ -23,7 +23,7 @@ class NodeGroupCreator():
     def process_default_value(self, socket, type, default):
         if default is None:
             return
-        if type in ['NodeSocketFloat', 'NodeSocketTextureAlpha']:
+        if type in ['NodeSocketFloat']:
             default = float(default)
         elif type == 'NodeSocketInt':
             default = int(default)
@@ -33,8 +33,9 @@ class NodeGroupCreator():
             values = default.split(',')
             default = Vector((float(values[0]), float(values[1]), float(values[2]), float(values[3])))
         else:
+            print('INFO: default value for NodeSocket ' + type + ' not supported')
             return
-        print(type)
+
         socket.default_value = default
 
 
@@ -73,9 +74,6 @@ class NodeGroupCreator():
                 continue
             type = child_node.get('type')
             name = child_node.get('name')
-
-            if type == 'NodeSocketTextureAlpha':
-                type = 'NodeSocketFloat'
 
             socket = node_tree.inputs.new(type, name)
             self.process_presets(socket, type, child_node, name)
