@@ -5,9 +5,9 @@
     <input name="Technique" type="NodeSocketInt" default="1" min="0" max="3"/>
     <input name="ColorDiffuse" type="NodeSocketColor" default="0.8, 0.8, 0.8, 1.0"/>
     <input name="Texture_0" type="NodeSocketTexture"/>
-    <input name="Texture_0_Alpha" type="NodeSocketTextureAlpha" default="1.0"/>
+    <input name="Texture_0_Alpha" type="NodeSocketTextureAlpha"/>
     <input name="Texture_1" type="NodeSocketTexture"/>
-    <input name="Texture_1_Alpha" type="NodeSocketTextureAlpha" default="1.0"/>
+    <input name="Texture_1_Alpha" type="NodeSocketTextureAlpha"/>
     <input name="AlphaTestEnable" type="NodeSocketBool"/>
     <input name="ColorAmbient" type="NodeSocketColor"/>
     <input name="ColorSpecular" type="NodeSocketColor"/>
